# AkaSecCTF2024

crypto/Guess/: chall.py  description.txt
crypto/My_Calculus_Lab/: chall.py  description.txt  enc.txt  solve.py
web/Bash_Through_It/: app.py  description.txt  flag.txt
web/Jink_Web_Token/: Dockerfile  app.py  description.txt  requirements.txt
web/Proxy_Foor_Life/deploy/: main.go
web/Rusty_Road/attachments/rustyroad/: Cargo.toml
web/Rusty_Road/attachments/rustyroad/src/: main.rs
web/Rusty_Road/deploy/adminlogging/: index.ts
web/Rusty_Road/deploy/rustyroad/: Cargo.toml  Dockerfile
web/Rusty_Road/deploy/rustyroad/src/: main.rs
web/Rusty_Road/solve/: script.py
